--- a/site.css
+++ b/site.css
@@ -1,78 +1,212 @@
-body {
-    margin: 0;
-    font-size: 14px;
-    font-weight: 300;
-    font-family: Roboto, 'Open Sans', Arial, sans-serif;
-  }
-  section {
-    width: 100%;
-    margin: 0 auto;
-    overflow: hidden;
-    padding: 30px 0 20px 0;
-  }
-  section hr {
-    width: 30px;
-  }
-  .corFundo {
-    background: #f7f7f7;
-  }
-  header {
-    height: 60px;
-    width: 100%;
-    position: fixed;
-    z-index: 10;
-    background: black;
-  }
-  header .menu {
-    float: right;
-    list-style: none;
-    margin-top: 0px;
-    margin-right: 5%;
-  }
-  header .menu li {
-    float: left;
-    font-size: 18px;
-    padding: 20px 10px 20px 10px;
-  }
-  header .menu li a {
-    color: initial;
-    text-decoration: initial;
-    color: white;
-  }
-  figure .titulo {
-    color: rgb(21, 20, 114);
-    line-height: 0.9;
 
-  }
-  figure h1.titulo {
-    font-size: 70px;
-    letter-spacing: -5px;
-    margin: 20% 20% 0 20%;
-    padding-bottom: 20px;
-  }
-  figure h1.titulo {
-    font-size: 70px;
-    letter-spacing: -5px;
-    margin: 20% 20% 0 20%;
-    padding-bottom: 20px;
-  }
-  figure h2.titulo {
-    padding-top: 20px;
-    font-size: 30px;
-    margin: 0 30% 0 30%;
-    border-top: 3px solid white;
-    padding-bottom: 30px;
-  }
+body, html{
+  margin:0px;
+  
+}
+header{
+  background-color:black;
+  color:white;
+  height:60px;
+  width: 100%;
+  position:fixed;
+  z-index:10;
+}
+#logo{
+  width: 75px;
+  position:absolute;
+  margin-left: 4%;
+  float:left;
+  
+}
+#menu{
+  float:right;
+  margin-right: 4%;
+  list-style:none;
+  margin-top:0px;
+  margin-bottom:0px;
+}
+li{
+  float: left;
+  padding:22px 10px 22px 10px;
+}
 
-  h1 {
-    text-align: center;
-    font-size: 30px;
+
+li:hover{
+  background-color:rgb(80, 175, 179);
+}
+
+#imagem-Fundo{
+  background: url("pexels-pixabay-267885.jpg");
+  height:100vh;
+  background-size:cover;
+  text-align: center;
+}
+h1{
+  margin:0px;
+}
+#titulo{
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top: 20%;
+  font-size: 50px;
+}
+
+#subtitulo{
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 25%;
+  padding-right: 25%;
+  padding-bottom: 3%;
+  font-size: 30px;
+}
+
+#clicar{
+  color: white;
+  border: 1px white solid;
+  padding:10px 20px 10px 20px;
+}
+
+#clicar1{
+  color:white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px; 
+}
+
+section{
+  float: left;
+}
+
+a:-webkit-any-link {
+  text-decoration:white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:20px;
+}
+
+hr {
+  color:white;
+  margin-block-start: 0.2em;
+  margin-block-end: 0.2em;
+  margin-inline-start: 35%;
+  margin-inline-end: 35%;
+  border-width:2px;
+  display:block;
+  border-style: solid;
+}
+#Analise{
+  text-align: center;
+}
+
+.imagem{
+  width:60px;
+  padding-top: 50px;
+  padding-bottom: 10px;
+}
+.texto_analise{
+
+font-family: Arial, Helvetica, sans-serif;
+font-size: 22px;
+margin-block-end: 0em;
+text-align: center;
+}
+.texto_analise1{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  text-align: center;
+  
   }
-  .meio {
-    text-align: center;
-  }
-  p{
-    text-align: center;
-    font-size: 20px;
-    margin: 0 20% 0 20%;
-  }
+#projeto{
+  font-family: Arial, Helvetica, sans-serif;
+  border-left: 2.9vw rgb(211, 193, 193) solid;
+  background-color: #f0f0f0;
+}
+
+#tamanho{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  text-align: center;
+  padding-top:20px;
+}
+
+#Analise{
+  padding: 20px;
+  border-left: 2.9vw rgb(243, 215, 215) solid;
+}
+p{
+  margin-block-end: 0px;
+}  
+.conteudo{
+  text-align: justify;
+}
+.texto{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px; 
+}
+
+#escolas{
+  padding: 20px;
+  border-left: 2.9vw rgb(250, 219, 173) solid;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  background-color: #f0f0f0;
+}
+
+.divisão{
+  color:gray;
+  margin-inline-start: 49%;
+  margin-inline-end: 49%;
+  border-width:1px;
+  padding-top: -10px;
+}
+
+h3.espaço{
+  margin-block-end: 0px;
+}
+.imagem_escola{
+  width:100%;
+  padding-top: 30px;
+  padding-bottom: 10px;
+}
+.texto_escola{
+  font-size: 15px;
+  font-family:Arial, Helvetica, sans-serif;
+  text-decoration-style: solid;
+  font-weight: bold;
+  text-align: center;
+}
+
+.um{
+  width: 85%;
+}
+
+#perfil{
+  
+  padding:20px 20px 20px 20px;
+  border-left: 2.9vw rgb(188, 226, 193) solid;
+}
+
+#eu{
+  width: 70%;
+  padding-left: 20%;
+  padding-top:20px;
+}
+.coluna{
+  float:left;
+  padding:0 5%;
+  position:relative;
+}
+
+#video{
+  padding-top: 20%;
+}
+
+.dois{
+  width: 40%;
+}
+.quatro{
+  width: 15%;
+}
+.sobremim{
+  padding-top:1%;
+}
+
+
