--- a/site.css
+++ b/site.css
@@ -27,7 +27,7 @@ header{
 }
 li{
   float: left;
-  padding:22px 10px 22px 10px;
+  padding:21px 9.5px 21px 9.5px;
 }
 
 
@@ -46,14 +46,14 @@ h1{
 }
 #titulo{
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Quicksand', sans-serif;
   padding-top: 20%;
   font-size: 50px;
 }
 
 #subtitulo{
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Quicksand', sans-serif;
   padding-left: 25%;
   padding-right: 25%;
   padding-bottom: 3%;
@@ -64,11 +64,15 @@ h1{
   color: white;
   border: 1px white solid;
   padding:10px 20px 10px 20px;
+  font-family:'Quicksand', sans-serif;
 }
-
+#clicar:hover{
+  background-color:#4C7572;
+ 
+}
 #clicar1{
   color:white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 15px; 
 }
 
@@ -103,25 +107,25 @@ hr {
 }
 .texto_analise{
 
-font-family: Arial, Helvetica, sans-serif;
+font-family: 'Work Sans', sans-serif;
 font-size: 22px;
 margin-block-end: 0em;
 text-align: center;
 }
 .texto_analise1{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Work Sans', sans-serif;
   font-size: 22px;
   text-align: center;
   
   }
 #projeto{
   font-family: Arial, Helvetica, sans-serif;
-  border-left: 2.9vw rgb(211, 193, 193) solid;
+  border-left: 2.9vw #366275  solid;
   background-color: #f0f0f0;
 }
 
 #tamanho{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Work Sans', sans-serif;
   font-size: 22px;
   text-align: center;
   padding-top:20px;
@@ -129,22 +133,23 @@ text-align: center;
 
 #Analise{
   padding: 20px;
-  border-left: 2.9vw rgb(243, 215, 215) solid;
+  border-left: 2.9vw #4b88a1 solid; 
 }
 p{
   margin-block-end: 0px;
 }  
 .conteudo{
   text-align: justify;
+  font-family: 'Roboto', sans-serif;
 }
 .texto{
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px; 
+  font-family: 'Roboto', sans-serif;
+  font-size: 16.5px; 
 }
 
 #escolas{
   padding: 20px;
-  border-left: 2.9vw rgb(250, 219, 173) solid;
+  border-left: 2.9vw #5ea4c0 solid;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   background-color: #f0f0f0;
@@ -168,7 +173,7 @@ h3.espaço{
 }
 .texto_escola{
   font-size: 15px;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-decoration-style: solid;
   font-weight: bold;
   text-align: center;
@@ -181,7 +186,7 @@ h3.espaço{
 #perfil{
   
   padding:20px 20px 20px 20px;
-  border-left: 2.9vw rgb(188, 226, 193) solid;
+  border-left: 2.9vw #6abedf solid;
 }
 
 #eu{
@@ -209,4 +214,25 @@ h3.espaço{
   padding-top:1%;
 }
 
-
+@media all and (max-width: 768px){
+  #menu{
+    visibility: hidden;
+  }
+  .coluna, .dois, .quatro{
+    display:block;
+    width: 80%;
+    padding:0;
+    margin: 10px auto;
+    float:none;
+  }
+  .logoMeio{
+    width:100%;
+    margin-left:0px;
+    position:relative;
+    text-align:center;
+  }
+  #logo{
+    margin-left:0px;
+    transform:translateX(-50%)
+  }
+}
